Sun Apr  8 01:37:21 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made preliminary `make install' work.

Thu Apr  5 17:42:30 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added SilcServerRekey context into silcd/idlist.h.

	* Added the PFS support as defined in the specification to the
	  SKE protocol.  Affected files lib/silcske/*.c.

	* Added `ske_group' field to the SilcServerRekey context to hold
	  the number of the SKE group that is used with PFS in re-key.
	  Affected file silcd/idlist.h.

	* Added PFS re-key support to the server.  Affected file is
	  silcd/protocol.c.

	* Added silc_protocol_cancel to cancel execution of the next
	  state of the protocol.  Affected file is
	  lib/silccore/silcprotocol.[ch].

	* Added the re-key support with and without PFS to the client
	  library.  Re-key is performed once in an hour, by default.

	  Added new protocol type SILC_PROTOCOL_CLIENT_REKEY.
	  Added silc_client_rekey_callback and silc_client_rekey_final.
	  Affected files are lib/silcclient/protocol.[ch] and
	  lib/silcclient/client.[ch].

	* Removed the `hmac_key' and `hmac_key_len' fields from the
	  SilcClientConnection structure; not needed.  Affected file is
	  lib/silcclient/client.h.

	* Updated TODO.

Wed Apr  4 16:32:31 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Do not ask whether user wants to use the negotiated private key
	  for private messages, just use it.  Affected file is 
	  silc/local_command.c.

	* Added `send_enc_key' and `enc_key_len' fields to the 
	  SilcIDListData structure since they are needed in the re-key
	  phase.  Affected file is silcd/idlist.[ch].

	* Implemented the simple re-key protocol into the server.
	  Affected files silcd/server.c and silcd/protocol.[ch].  The
	  re-key will be performed once in an hour, by default.

	  Added new protocol type SILC_PROTOCOL_SERVER_REKEY.
	  Added silc_server_rekey, silc_server_rekey_callback and
	  silc_server_rekey_final.
