@@ -77,6 +77,14 @@ Kuopio, Finland:Test Server:Pekka Riikonen:priikone@poseidon.pspt.fi
 lassi.kuo.fi.ssh.com:10.2.1.6:Kuopio, Finland:706
 
 #
+# Server keys
+#
+# Format: +<public key>:<private key>
+#
+[ServerKeys]
+/etc/silc/silcd.pub:/etc/silc/silcd.prv
+
+#
 # Listenning ports.
 #
 # Format: <local IP/UNIX socket path>:<remote IP>:<port>
